--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
     />
-    <title>React App</title>
+    <title>Travel Salesman Problem</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
